@@ -1,3 +1,5 @@
+import org.gradle.kotlin.dsl.attributes
+
 plugins {
     id("java-library")
     id("jacoco")
@@ -21,7 +23,44 @@ repositories {
     mavenCentral()
 }
 
+val viewerRuntime = configurations.create("viewerRuntime") {
+    isCanBeConsumed = false
+    isCanBeResolved = true
+}
+
 dependencies {
+    val osName = System.getProperty("os.name").lowercase()
+    val osArch = System.getProperty("os.arch").lowercase()
+
+    val javafxVersion = "21.0.10"
+    val javafxOS = when {
+        osName.contains("win") -> "win"
+        osName.contains("mac") -> "mac"
+        osName.contains("linux") -> "linux"
+        else -> null
+    }
+    val javafxArch = when (osArch) {
+        "amd64", "x86-64", "x64" -> ""
+        "aarch64", "arm64" -> "-aarch64"
+        else -> null
+    }
+
+    fun javafx(module: String) {
+        if (javafxOS != null && javafxArch != null) {
+            val notation = "org.openjfx:javafx-$module:$javafxVersion:${javafxOS}${javafxArch}"
+
+            compileOnly(notation)
+            testCompileOnly(notation)
+            testRuntimeOnly(notation)
+            add(viewerRuntime.name, notation)
+        }
+    }
+
+    javafx("base")
+    javafx("controls")
+    javafx("graphics")
+    javafx("swing") // For Benchmark
+
     compileOnlyApi("org.jetbrains:annotations:26.1.0")
 
     testImplementation(platform("org.junit:junit-bom:6.0.0"))
@@ -35,12 +74,36 @@ tasks.withType<JavaCompile> {
     options.release.set(17)
 }
 
+val mainClassName = "org.glavo.avif.javafx.AvifViewerApp"
+
+tasks.jar {
+    manifest.attributes(
+        "Main-Class" to mainClassName,
+    )
+}
+
+tasks.register<JavaExec>("run") {
+    group = "application"
+    description = "Runs the JavaFX AVIF viewer."
+    dependsOn(tasks.classes)
+    classpath(sourceSets["main"].runtimeClasspath, viewerRuntime)
+    mainClass.set(mainClassName)
+
+    if (this.javaVersion >= JavaVersion.VERSION_25) {
+        jvmArgs("--enable-native-access=javafx.graphics")
+    }
+}
+
 tasks.test {
     useJUnitPlatform()
     systemProperty(
         "org.bytedeco.javacpp.cachedir",
         layout.buildDirectory.dir("javacpp-cache").get().asFile.absolutePath,
     )
+
+    if (this.javaVersion >= JavaVersion.VERSION_25) {
+        jvmArgs("--enable-native-access=javafx.graphics")
+    }
 }
 
 val libavifCommit = "b54eac58daf563e9150cc6abce7631ac71b999aa"
